# Convolutional-Neural-Network

./: .gitignore  CMakeLists.txt  README.md  graphic.py  main_cnv.cpp  main_test.cpp  main_train.cpp  main_train_cnn.cpp
config/: fashion.txt  mnist.txt
database/FASHION/: fahsion.py
include/: cnn.hpp  conv2d.hpp  conv2d_core.hpp  flatten.hpp  flatten_core.hpp  layer.hpp  layer_cnn.hpp  mlp.hpp  mlp_core.hpp  pooling.hpp  pooling_core.hpp  tensor.hpp  tensor2d.hpp
src/: conv2d.cpp  flatten.cpp  layer.cpp  mlp.cpp  pooling.cpp
